--- a/views/input_case.pug
+++ b/views/input_case.pug
@@ -22,20 +22,31 @@ block content
         option(value = "", disabled, selected = "true") - 
         if lists_1 !== null
           -for(var i = 1; i < lists_1.length; i++){
-              option(value = lists_1[i]) #{lists_1[i]}             
+              if lists_2 !== null
+                if lists_2[0] == lists_1[i]
+                  option(value = lists_1[i], selected = "true") #{lists_1[i]}
+                else
+                  option(value = lists_1[i]) #{lists_1[i]}
+              else
+                option(value = lists_1[i]) #{lists_1[i]}             
           -}        
       label(for = 'select-sub-elements') APT sub-elements : 
       select(id = 'selected-sub-elements')
          option(value = "", disabled, selected = "true") - 
+         if lists_2 !== null
+           -for(var i = 1; i < lists_2.length; i++){
+              option(value = lists_2[i]) #{lists_2[i]}
+           -}
       input(type = 'button', id = 'add_btn', value = 'case 추가')
     div(id = 'selected-elements-case')
-      h2 입력된 공격 케이스들
-      table(id = 'selected-elements-table')
-        thead
-          tr
-            th APT Stage
-            th APT element
-            th APT sub-element
-            th 입력 취소
-        tbody
+      h3 입력된 공격 케이스들      
+        table(id = 'selected-elements-table')
+          thead
+            tr
+              th APT Stage
+              th APT element
+              th APT sub-element
+              th 입력 취소
+          tbody
+        button(onclick = "inputCase()") 케이스추가
   
