--- a/views/elementManagement.pug
+++ b/views/elementManagement.pug
@@ -1,34 +1,50 @@
 extends layout
 block scripts
-  script(src="/javascripts/elements_setting.js")
+  script(src="/javascripts/elementManagement.js")
+  link(rel='stylesheet', href='/stylesheets/style_1.css')
 block content
   div(id = 'manage-elements')
-    h2 elements 추가창
     //요소 추가하는 구역
-    div(id = 'add_element') 
+    div(id = 'add_element').col-md-12
+      h2 Add Elements
       -var apt_phase = ["Reconnaissance_phase", "Delivery_phase", "Initial_intrusion_phase", "Connecting_to_server_phase", "Lateral_movement_phase", "Information_gathering_phase", "Completing_the_attack_phase"];
       form(action = '/elements/add', method = 'post') 
-        label(for = 'select-stage') APT stage : 
-        select(id = 'selected-Stage', name = "selectedStage")
-          option(value = "", disabled, selected = "true") - 
-          each phase in apt_phase
-            option(value = phase) #{phase}
-        label element :       
-        input(type = 'text', name = 'main_element')
-        label sub-element1 :   
-        input(type = 'text', name = 'sub_element1')
-        label sub-element2 :   
-        input(type = 'text', name = 'sub_element2')
-        label sub-element3 :   
-        input(type = 'text', name = 'sub_element3')          
-        label instance :   
-        input(type = 'text', name = 'instance')
-        input(type = 'submit', value = '추가')
+        div.col-md-6
+          label(for = 'select-stage') APT stage : 
+          select.form-control(id = 'selected-Stage', name = "selectedStage")
+            option(value = "", disabled, selected = "true") - 
+            each phase in apt_phase
+              option(value = phase) #{phase}
+        div.col-md-6
+          label element :       
+          input.form-control(type = 'text', name = 'main_element')
+        div.col-md-6
+          label sub-element1 :   
+          input.form-control(type = 'text', name = 'sub_element1')
+        div.col-md-6
+          label sub-element2 :   
+          input.form-control(type = 'text', name = 'sub_element2')
+        div.col-md-6
+          label sub-element3 :   
+          input.form-control(type = 'text', name = 'sub_element3')
+        div.col-md-6          
+          label instance :   
+          input.form-control(type = 'text', name = 'instance')
+          br
+        input.btn.btn-primary.col-md-12(type = 'submit', value = '추가')
     //저장된 요소들 테이블로 출력
-    div(id = 'stage-result')
-      h3 저장된 요소들
+    div(id = 'stage-result').col-md-12
+      //h3 저장된 요소들
       p
-      table(id = 'ele_table')
+      table(id = 'ele_table').col-md-12
+        caption 
+          h2 Stored Elements
+          form(action="" id="setRows")
+            p
+              | showing  
+              input(type="text" name="rowPerPage" value="15")
+              |   item per page
+
         thead
           tr
             th(hidden) id
@@ -63,6 +79,6 @@ block content
                   else 
                     td -                                                
                   td
-                    input(type = 'button', class = 'del_btn', value = 'delete')
+                    input.btn-danger(type = 'button', class = 'del_btn', value = 'delete')
             -}
         
