--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,12 @@
 extends layout
-
+block scripts
+  script(src="/javascripts/updateCases.js")
 block content
   div(id='page-wrapper')
     div(id='inner')
       div(class='row')
-        div(class='col-md-12')
-          h2 Main Page
+        //h2 Main Page
+        br
+        div(class='col-md-12').div-primary
+          form(action = "/updateDocument", method = "post")
+            button.btn.btn-primary.btn-primary2(tpye = 'submit',id = 'updateBtn') Update Cases
