--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,11 @@ html
   head
     title= title
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/assets/css/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/assets/css/font-awesome.css')
+    link(rel='stylesheet', href='/stylesheets/assets/css/custom.css')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans', type='text/css')
     //script(src='https://code.jquery.com/jquery-1.9.1.min.js')
     script(src="http://code.jquery.com/jquery-latest.min.js")
     block scripts
