--- a/views/result.pug
+++ b/views/result.pug
@@ -8,7 +8,7 @@ block content
                     div
                         ul(class='nav nav-tabs')
                             li
-                                a(href='/result/apt') Similar Case
-                            //li
-                                a(href='/result/recommend') Security Requirement Template(구현된거 없음)
+                              a(href='/result/apt') Similar Case
+                            li
+                              a(href='/result/risk') Risk Assessment
                     block result
