--- a/views/results.pug
+++ b/views/results.pug
@@ -10,7 +10,7 @@ block content
                             li
                                 a(href='/results/apt') Similar Case
                             li
-                                a(href='/results/risk') Risk Assessment
+                                a(href='/results/risk') Risk Assessment(구현된거 없음)
                             li
-                                a(href='/results/recommend') Security Requirement Template
+                                a(href='/results/recommend') Security Requirement Template(구현된거 없음)
                     block results
