--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html
             a(class='navbar-brand', href='/') RSRA
           ul(class='nav navbar-nav')
             li
-              a(href='/domain') Input Domain Knowledge
+              a(href='/domain') Input Domain Knowledge(X)
             li
               a(href='/case') Input APT cases
             li
