--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,5 @@ block content
         br
         div(class='col-md-12').div-primary
           form(action = "/updateDocument", method = "post")
-            button.btn.btn-primary.btn-primary2(tpye = 'submit',id = 'updateBtn') Update Cases
+            div.jb
+              button(type = 'submit',id = 'updateBtn')
