--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
           div(class='navbar-header')
             button(type = 'button', class = 'navbar-toggle', data-toggle = 'collapse', data-target = '.sidebar-collapse')
               span(class = 'icon-bar')
-            a(class = 'navbar-brand', href='/') 메인 페이지(layout.pug)
+            a(class = 'navbar-brand', href='/') RSRA
           ul(class = 'nav navbar-nav')
             li
               a(href = '/case') Input APT cases
