--- a/views/resultsRiskAssessment.pug
+++ b/views/resultsRiskAssessment.pug
@@ -1,18 +1,16 @@
 extends result
 block scripts
-
 block result
   if aList != null
-    table#ele_table.col-md-12
+    table#ele_table.col-md-12.type08
       thead
         tr
           th Asset
-          th Count
+          th Total
       tbody
       -for(var i in aList){
         tr
           td #{i}
           td #{aList[i]}
       -}
-  else 
-    h3 null입니다.
+
